--- a/scss/core/_header.scss
+++ b/scss/core/_header.scss
@@ -69,19 +69,21 @@ header {
                     display: none;
                     position: absolute;
                     padding: 10px 0;
-                    
                     a{
                         color: #fff;
                         font-size: $fz-text;
                         letter-spacing: 2px;
+                        text-align: center;
                         height: 100%;
                         display: flex;
                         flex-direction: column;
-                        padding: 10px 0;
+                        padding: 10px 15px;
                         text-decoration: none;
                     }
                     &.clicked{
                         display: block;
+                        top: 100%;
+                        background: $black-bg-cl;
                         a:hover{
                             transition: 0.3s;
                             // opacity: 0.5;
@@ -149,6 +151,7 @@ header {
     }
     &.active{
         background: $black-bg-cl;
+        opacity: 0.7;
         @include transition($t);
     }  
 }
