--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -14,6 +14,7 @@
         width: 100%;
         height: 100%;
         position: relative;
+        display: none;
         .text{
           @include mid;
           z-index: 100;
@@ -30,6 +31,9 @@
           height: 100%;
           width: 100%;
           @include midimg(initial);
+        }
+        &.active{
+          display: block;
         }
       }
     }
