--- a/scss/core/_layouts.scss
+++ b/scss/core/_layouts.scss
@@ -17,6 +17,7 @@ body {
     margin: auto;
     background: #fff;
     position: relative;
+    // cursor: none;
     scroll-behavior: smooth;
     --pdsection: 90px;
     main{
