add libs Photoswipe

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -569,52 +569,55 @@
   .gallery {
     background: $black-bg-cl;
     .gallery__list {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 200px;
-      gap: 11px;
-      &-img {
-        overflow: hidden;
-        position: relative;
-        cursor: pointer;
-        img {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          @include transform(translate(-50%, -50%) scale(1));
-          min-width: 100%;
-          min-height: 100%;
-          object-fit: cover;
-          @include transition($t);
-        }
-        &::before {
-          content: "";
-          width: 100%;
-          height: 100%;
-          background: $black-bg-cl;
-          opacity: 0;
-          position: absolute;
-          z-index: 15;
-          @include transition($t);
-        }
-        &:nth-child(2) {
-          grid-area: 1/2/3/3;
-        }
-        &:hover {
+      .carousel-img {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 200px;
+        gap: 11px;
+        .gallery__list-img {
+          overflow: hidden;
+          position: relative;
+          cursor: pointer;
           img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            @include transform(translate(-50%, -50%) scale(1));
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
             @include transition($t);
-            @include transform(translate(-50%, -50%) scale(1.05));
           }
           &::before {
-            opacity: 0.4;
+            content: "";
+            width: 100%;
+            height: 100%;
+            background: $black-bg-cl;
+            opacity: 0;
+            position: absolute;
+            z-index: 15;
             @include transition($t);
           }
+          &:nth-child(2) {
+            grid-area: 1/2/3/3;
+          }
+          &:hover {
+            img {
+              @include transition($t);
+              @include transform(translate(-50%, -50%) scale(1.05));
+            }
+            &::before {
+              opacity: 0.4;
+              @include transition($t);
+            }
+          }
+        }
+        @include mobile {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 7px;
         }
       }
-      @include mobile {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 7px;
-      }
+      
     }
   }
   /** ------------------------------- 
