--- a/scss/pages/_jquery.scss
+++ b/scss/pages/_jquery.scss
@@ -1,3 +1,11 @@
+.header{
+    background: rgb(18, 109, 59);
+    opacity: 0.7;
+    .container-fluid{
+        
+    }
+}
+
 .jquery{
     .title{
         font-size: 30px;
