--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -32,7 +32,7 @@
           width: 100%;
           @include midimg(initial);
         }
-        &.active {
+        &.is-selected {
           display: block;
         }
       }
