--- a/scss/core/_libs.scss
+++ b/scss/core/_libs.scss
@@ -420,7 +420,7 @@ https://flickity.metafizzy.co
 
 .flickity-viewport {
   overflow: hidden;
-  position: relative;
+  // position: relative;
   height: 100%;
 }
 
@@ -518,16 +518,16 @@ https://flickity.metafizzy.co
 
 /* ---- page dots ---- */
 
-.flickity-page-dots {
-  position: absolute;
-  width: 100%;
-  bottom: -25px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: center;
-  line-height: 1;
-}
+// .flickity-page-dots {
+//   position: absolute;
+//   width: 100%;
+//   bottom: -25px;
+//   padding: 0;
+//   margin: 0;
+//   list-style: none;
+//   text-align: center;
+//   line-height: 1;
+// }
 
 .flickity-rtl .flickity-page-dots { direction: rtl; }
 
