--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -14,7 +14,7 @@
         width: 100%;
         height: 100%;
         position: relative;
-        display: none;
+        // display: none;
         .text {
           @include mid;
           z-index: 100;
@@ -25,6 +25,18 @@
             letter-spacing: 20px;
             color: $yellow-cl;
             margin: 45px 0;
+            opacity: 0;
+            visibility: hidden;
+            @include transition(0.3s);
+            @include transform(translateY(30px));
+            @include transition-delay(0.4s);
+          }
+          .btnmain{
+            opacity: 0;
+            visibility: hidden;
+            @include transition(0.3s);
+            @include transform(translateY(35px));
+            @include transition-delay(0.8s);
           }
         }
         .banner {
@@ -32,8 +44,24 @@
           width: 100%;
           @include midimg(initial);
         }
-        &.is-selected {
-          display: block;
+        &.is-selected{
+          .text{
+            h2{
+              opacity: 1;
+              visibility: visible;
+              @include transition(1s);
+              @include transform(translateY(0px));
+              @include transition-delay(0.4s);
+
+            }
+            .btnmain{
+              opacity: 1;
+              visibility: visible;
+              @include transition(1s);
+              @include transform(translateY(0px));
+              @include transition-delay(0.8s);
+            }
+          }
         }
       }
     }
@@ -66,15 +94,14 @@
             display: inline-block;
           }
         }
-        ul {
+        ol {
           margin-left: 15px;
           li {
             width: 9px;
             height: 9px;
             background: $white-cl;
             @include br(50%);
-            opacity: 0.5;
-            margin-right: 12px;
+            opacity: 0.4;
             display: inline-block;
             cursor: pointer;
             flex-shrink: 0;
@@ -736,14 +763,16 @@
     Component Image move
   */
   .photos {
-    display: flex;
-    align-items: center;
     padding-top: 0;
-    img {
-      margin: 0 15px;
-      max-width: 100%;
-      min-width: 500px;
-      overflow: hidden;
+    &__list{
+      display: flex;
+      align-items: center;
+      img {
+        margin: 0 15px;
+        max-width: 100%;
+        min-width: 500px;
+        overflow: hidden;
+      }
     }
   }
 }
