additional responsive mobile section Photo

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -800,6 +800,13 @@
         }
       }
     }
+    @include mobile {
+      &__list {
+        img {
+          height: 200px;
+        }
+      }
+    }
   }
 }
 
